# dagster_ncei

./: .gitignore  1.ipynb  README.md  config.yaml  dagster.ipynb  requirements.txt  weather_pipline.py
dagster_weather/: README.md  config.yaml  email.txt  latlon.txt  pyproject.toml  setup.cfg  setup.py
dagster_weather/dagster_weather/: definitions.py  weather_pipeline.py
